examples/test/testpolicy396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy396
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key46: value1
      key20: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value21
      podSelector:
        matchLabels:
          key47: value27
          key37: value37
          key29: value36
